# playground--indexer

./: .env  .env.example  .playground-config.json  CLAUDE.md  README.md  TOOLS.md  auto-organize.sh  main.py  minimal_web.py  playground-organizer.py  pyproject.toml  quick-analyze.sh  simple_web.py  start_web.py  web_ui.py
.claude/: settings.local.json
backend/: start_web_server.py  start_web_server_debug.py
backend/src/playground_organizer/: playground_organizer.py
frontend/static/: app.js  style.css
frontend/templates/: index.html
scripts/: analyze-access.sh  file-watcher.sh
src/playground_organizer/: __init__.py
static/: app.js  style.css
templates/: index.html
tests/: run_tests.py  test_playground_organizer.py
tests/test_playground/organized/by-theme/ai/: gpt-experiment
tests/test_playground/organized/by-theme/data/: data-pipeline
tests/test_playground/organized/by-theme/learning/: learning-course
tests/test_playground/organized/by-theme/media/: video-editor
tests/test_playground/organized/by-theme/misc/: random-stuff
tests/test_playground/organized/by-theme/productivity/: todo-app
tests/test_playground/organized/by-time/current/: ai-project  dev-tools  organized  stock-tracker
tests/test_resources/: .gitignore  README.md
